--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Running Redmine",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Keyboard shortcuts for using Redmine faster",
   "homepage_url": "https://github.com/paulmolluzzo/running-redmine",
   "manifest_version": 2,
@@ -13,6 +13,9 @@
       "run_at": "document_start",
       "matches": [
         "<all_urls>"
+      ],
+      "css": [
+        "content.css"
       ],
       "js": [
         "vendor/mousetrap.js",
